# libfaketime

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.OSX  Makefile.am  NEWS  README  README.OSX  README.developers  README.packagers  TODO  build.sh  config.h.in  configure.ac
.github/workflows/: make-autotest.yml  make-test.yml
man/: Makefile  Makefile.OSX  Makefile.am  faketime.1
meta/: Changelog  Makefile
packaging/OSX/: README
packaging/OSX/Fink/: libfaketime.info
packaging/OSX/Homebrew/: libfaketime.rb
packaging/OSX/MacPorts/: Portfile
src/: Makefile  Makefile.MacOS  Makefile.OSX  Makefile.am  Makefile.default  atof_nolocal.h  atof_nolocale.h  faketime  faketime.c  faketime_common.h  ft_sem.c  ft_sem.h  libfaketime.c  libfaketime.map  sunos_endian.h  test.sh  time_ops.h  timeprivacy
test/: Makefile  Makefile.MacOS  Makefile.OSX  Makefile.am  README-testframe.txt  _libtest.c  _run_test.c  _use_lib_test.c  functests.d.sh  functests.sh  getentropy_test.c  getrandom_test.c  libgetpid.c  libgetpid.h  libmallocintercept.c  librandom.c  librandom.h  pidtest.sh  randomtest.sh  repeat_random.c  shm_layout_test.c  syscall_test.c  syscalltest.sh  test.sh  test_OSX.sh  test_constructors.sh  test_variable_data.sh  testframe.sh  timetest.c  use_lib_getpid.c  use_lib_random.c
test/functests/: common.inc  dont_test_false.sh  test_exclude_mono.sh  test_follow_absolute.sh  test_shm_across_processes.sh  test_true.sh  test_walkone.sh
test/snippets/: README  clock_gettime.c  clock_gettime_heap.c  getentropy.c  getentropy.variable  getpid.c  getpid.variable  getrandom.c  getrandom.variable  include_headers.h  syscall.c  syscall_clock_gettime.c  syscall_clock_gettime_heap.c  syscall_clock_nanosleep.c  syscall_clock_nanosleep.variable  time.c  time.variable
test/variadic/: inner.c  main.c  outer.c
